fix(client): zoom cover images instead of stretching
For videos, the spotify api can return song covers that are not square

--- a/apps/client/src/components/PlayButton/index.module.css
+++ b/apps/client/src/components/PlayButton/index.module.css
@@ -15,6 +15,7 @@
   left: 0px;
   height: 48px;
   width: 48px;
+  object-fit: cover;
 }
 
 .icon {
