--- a/apps/client/src/scenes/ArtistStats/FirstAndLast/index.module.css
+++ b/apps/client/src/scenes/ArtistStats/FirstAndLast/index.module.css
@@ -2,6 +2,7 @@
   height: 48px;
   width: 48px;
   border-radius: 6px;
+  object-fit: cover;
 }
 
 .item {
