--- a/apps/client/src/scenes/Tops/Albums/Album/index.module.css
+++ b/apps/client/src/scenes/Tops/Albums/Album/index.module.css
@@ -4,6 +4,7 @@
 
 .cover {
   border-radius: var(--radius);
+  object-fit: cover;
 }
 
 .names > :first-child {
